[package]
name = "fanuc_replica_fanuc"
version = "0.1.0"
edition = "2021"
publish = false
description = "FANUC-specific driver and conversion utilities"

[features]
default = ["ecs", "server"]

# ECS feature - enables Bevy Component derives
ecs = [
    "dep:bevy",
    "dep:pl3xus_common",
    "dep:pl3xus_sync",
    "dep:pl3xus_macros",
    "fanuc_replica_core/ecs",
    "fanuc_replica_execution/ecs",
    "fanuc_replica_programs/ecs",
    "fanuc_rmi/DTO",
]

# Server feature - enables server-only functionality (driver, tokio)
server = [
    "ecs",
    "dep:tokio",
    "dep:anyhow",
    "dep:rusqlite",
    "dep:bevy-tokio-tasks",
    "dep:pl3xus",
    "dep:pl3xus_websockets",
    "dep:chrono",
    "fanuc_rmi/driver",
    "fanuc_rmi/logging",
    "fanuc_replica_core/server",
    "fanuc_replica_execution/server",
    "fanuc_replica_programs/server",
]

# Stores feature - enables reactive stores for client-side fine-grained reactivity
stores = [
    "fanuc_rmi/DTO",
    "dep:reactive_stores",
    "dep:pl3xus_common",
]

[dependencies]
# Always available
cfg-if = "1.0"
serde.workspace = true
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# FANUC RMI types - always available for conversions
fanuc_rmi.workspace = true

# Robot-agnostic types
fanuc_replica_robotics.workspace = true

# Execution plugin for MotionCommandEvent
# IMPORTANT: default-features = false to avoid pulling tokio into WASM builds
fanuc_replica_execution = { workspace = true, default-features = false }

# Core infrastructure
# IMPORTANT: default-features = false to avoid pulling tokio into WASM builds
fanuc_replica_core = { workspace = true, default-features = false }

# Programs plugin for program types and database
# IMPORTANT: default-features = false to avoid pulling tokio into WASM builds
fanuc_replica_programs = { workspace = true, default-features = false }

# ECS feature dependencies
bevy = { workspace = true, features = ["multi_threaded", "bevy_log"], optional = true }
pl3xus_common = { workspace = true, optional = true }
pl3xus_sync = { workspace = true, optional = true }
pl3xus_macros = { workspace = true, optional = true }

# Server feature dependencies
tokio = { workspace = true, optional = true }
bevy-tokio-tasks = { workspace = true, optional = true }
anyhow = { version = "1.0", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
pl3xus = { workspace = true, optional = true }
pl3xus_websockets = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true }

# Stores feature dependencies (client-side)
reactive_stores = { workspace = true, optional = true }

