[package]
name = "fanuc_replica_programs"
version = "0.1.0"
edition = "2021"
publish = false
description = "Device-agnostic program management plugin for toolpath storage and execution"

[features]
default = ["ecs", "server"]

# ECS feature - enables Bevy Component derives and ECS systems
ecs = [
    "dep:bevy",
    "dep:pl3xus",
    "dep:pl3xus_common",
    "dep:pl3xus_sync",
    "dep:pl3xus_websockets",
    "dep:pl3xus_macros",
]

# Server feature - enables server-only functionality (database, handlers)
server = [
    "ecs",
    "dep:rusqlite",
    "dep:anyhow",
    "dep:csv",
    "dep:tracing",
    "fanuc_replica_core/server",
]

[dependencies]
# Always available
serde.workspace = true
thiserror = "2"

# Core plugin for database infrastructure
fanuc_replica_core = { workspace = true, default-features = false }

# ECS feature dependencies
bevy = { workspace = true, features = ["multi_threaded", "bevy_log"], optional = true }
pl3xus = { workspace = true, optional = true }
pl3xus_common = { workspace = true, optional = true }
pl3xus_sync = { workspace = true, features = ["runtime"], optional = true }
pl3xus_websockets = { workspace = true, optional = true }
pl3xus_macros = { workspace = true, optional = true }

# Server feature dependencies
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
anyhow = { version = "1.0", optional = true }
csv = { version = "1.3", optional = true }
tracing = { version = "0.1", optional = true }

